feat : homepage 추가

--- a/package.json
+++ b/package.json
@@ -169,5 +169,6 @@
     "plugins": [
     "@loadable/babel-plugin"
     ]
-  }
+  },
+  "homepage": "https://wondonghwi.github.io/React-CRA_SSR-CodeSplitting/"
 }
