--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start:server": "node dist/server.js",
     "build:server": "node scripts/build.server.js"
   },
@@ -108,6 +110,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   },
   "jest": {
@@ -167,7 +170,7 @@
       "react-app"
     ],
     "plugins": [
-    "@loadable/babel-plugin"
+      "@loadable/babel-plugin"
     ]
   },
   "homepage": "https://wondonghwi.github.io/React-CRA_SSR-CodeSplitting/"
